--- a/templates/index.html
+++ b/templates/index.html
@@ -156,6 +156,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 	<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 	<script src="{{url_for('static',  filename='js/scripts.js')}}"></script>
+	<script type="text/javascript" language="javascript" src="{{url_for('static',  filename='js/data.json')}}"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL-6b5jfho-AXqJnDWtugtjsSnimOWIFo&callback=initMap" async defer></script>
 </body>
 
