--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,8 @@
 <body>
 	<!-- begin template -->
 	<div class="navbar navbar-custom navbar-fixed-top">
-		<div class="navbar-header"><a class="navbar-brand" href="#"></a>
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#"></a>
 			<a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -54,43 +55,101 @@
 		<div class="row">
 			<div class="col-xs-12" id="left">
 
-				<h3>Choose your audience</h3>
-				<hr>
-
 				<!-- item list -->
+
+				<h4>Age Ranges</h4>
+				<div class='row'>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="age0to12">0-12</label>
+						</div>
+					</div>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="age13to18">13-18</label>
+						</div>
+					</div>
+				</div>
+				<div class='row'>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="age19to25">19-25</label>
+						</div>
+					</div>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="age26to40">26-40</label>
+						</div>
+					</div>
+				</div>
+				<div class='row'>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="age41to60">41-60</label>
+						</div>
+					</div>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="age61to90">61-90</label>
+						</div>
+					</div>
+				</div>
+
+				<hr>
 
 				<h4>Gender</h4>
 				<div class='row'>
-				<div class='col-md-6'>
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" value="" id="male_cb">Male</label>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="male_cb">Male</label>
+						</div>
+					</div>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="female_cb">Female</label>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class='col-md-6'>
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" value="" id="female_cb">Female</label>
-				</div>
-			  </div>
-			</div>
 				<hr>
 				<h4>Ethnicity</h4>
 				<div class='row'>
-					<div class='col-md-6'>
-					<div class="checkbox">
-						<label>
-							<input type="checkbox" value="" id="asian_cb">Asian</label>
-					</div>
-				</div>
 					<div class='col-md-6'>
 						<div class="checkbox">
 							<label>
 								<input type="checkbox" value="" id="caucasian_cb">Caucasian</label>
 						</div>
 					</div>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="chinese_cb">Chinese</label>
+						</div>
+					</div>
+				</div>
+				<div class='row'>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="indian_cb">Indian</label>
+						</div>
+					</div>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="black_cb">Black</label>
+						</div>
+					</div>
 				</div>
 				<hr>
+
 
 				<h4>Income</h4>
 				<div class='row'>
@@ -129,24 +188,6 @@
 				<!--map-canvas will be postioned here-->
 			</div>
 
-		</div>
-	</div>
-
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel">Lane Closure Example </h4>
-				</div>
-				<div class="modal-body">
-					This lane is closed
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Save changes</button>
-				</div>
-			</div>
 		</div>
 	</div>
 
