--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,8 @@
 			<div class="col-xs-12" id="left">
 
 				<!-- item list -->
-
+				<h2> Choose Your Audience </h2>
+				<hr>
 				<h4>Age Ranges</h4>
 				<div class='row'>
 					<div class='col-md-6'>
@@ -124,7 +125,7 @@
 					<div class='col-md-6'>
 						<div class="checkbox">
 							<label>
-								<input type="checkbox" value="" id="caucasian_cb">Caucasian</label>
+								<input type="checkbox" value="" id="white_cb">White</label>
 						</div>
 					</div>
 					<div class='col-md-6'>
@@ -173,6 +174,19 @@
 							<label>
 								<input type="checkbox" value="" id="highinc_cb">High</label>
 						</div>
+					</div>
+				</div>
+
+				<h4>Economics</h4>
+				<div class='row'>
+					<div class='col-md-6'>
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" value="" id="activity_cb">Economic Activity</label>
+						</div>
+					</div>
+					<div class='col-md-6'>
+
 					</div>
 				</div>
 
