--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,7 +22,7 @@ body{
 }
 
 .navbar-custom {
-	background-color: #cc8c15;
+	background-color: #163051;
     color:#fff;
 }
 
@@ -52,6 +52,8 @@ body{
 
 #left {
 	height:100%;
+  background-color: #2f4b6c;
+  color:#efefef;
 }
 
 #map-canvas {
@@ -62,4 +64,9 @@ body{
     top:50px;
     bottom:0;
     overflow:visible;
+}
+
+.btn-success {
+  border-color: #163051;
+  background-color: #163051;
 }
