--- a/templates/index.html
+++ b/templates/index.html
@@ -109,13 +109,13 @@
 					<div class='col-md-6'>
 						<div class="checkbox">
 							<label>
-								<input type="checkbox" value="" id="male_cb">Male</label>
+								<input type="checkbox" value="" id="male_cb" name="gender">Male</label>
 						</div>
 					</div>
 					<div class='col-md-6'>
 						<div class="checkbox">
 							<label>
-								<input type="checkbox" value="" id="female_cb">Female</label>
+								<input type="checkbox" value="" id="female_cb" name="gender">Female</label>
 						</div>
 					</div>
 				</div>
@@ -177,6 +177,7 @@
 					</div>
 				</div>
 
+				<hr>
 				<h4>Economics</h4>
 				<div class='row'>
 					<div class='col-md-6'>
