--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,14 @@
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 	<link href="{{url_for('static',  filename='css/styles.css')}}" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
 </head>
 
 <body>
 	<!-- begin template -->
 	<div class="navbar navbar-custom navbar-fixed-top">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#"></a>
+			<a class="navbar-brand" href="#">Location Insights</a>
 			<a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -28,8 +28,7 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Link</a></li>
+				<li><a href="#">About</a></li>
 
 				<li>&nbsp;</li>
 			</ul>
@@ -193,8 +192,9 @@
 
 				<!-- /item list -->
 				<hr>
+				<div style="text-align:right; padding-right:45px; padding-bottom: 30px;">
 				<button type="button" class="btn btn-success" id="update_btn" onclick="update_onclick()">Update</button>
-
+			</div>
 
 
 			</div>
