update zoom and button

--- a/templates/index.html
+++ b/templates/index.html
@@ -193,9 +193,12 @@
 
 				<!-- /item list -->
 				<hr>
-				<div style="text-align:right; padding-right:45px; padding-bottom: 30px;">
+				<div class="row">
+					<div class="col-md-6 col-md-offset-6">
+				<div style="padding-right:45px; padding-bottom: 30px;">
 				<button type="button" class="btn btn-success" id="update_btn" onclick="update_onclick()">Update</button>
 			</div>
+		</div>
 
 
 			</div>
